tests/bedrock/bedrockgateway/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bedrockgateway
